# photovelocity-leptos

./: Cargo.toml  Dockerfile  README.md  leptosfmt.toml  package-lock.json  pubkey.asc  tailwind.config.js
.github/workflows/: build.yml
src/: app.rs  context.rs  error_template.rs  folder.rs  hash.rs  image.rs  lib.rs  main.rs  pgp.rs
src/api/: login.rs  mod.rs
src/app/: breadcrumb_nav.rs  folder_list.rs  folder_thumb.rs  image_list.rs  image_thumb.rs
